fix - center aligned 'get started' button text

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ body {
   width: fit-content;
   margin: 1rem 0;
   text-decoration: none;
+  text-align: center;
 }
 
 .landing-page-part2 {
